[package]
name = "image2ascii"
version = "0.1.0"
edition = "2021"
authors = ["devanarayanj.mec@gmail.com"]

[dependencies]
image = { features = ["jpeg_rayon", "gif", "png"], default-features = false, version = "0.24.5" }
anyhow = "1.0.66"
crossterm = { default-features = false, version = "0.25.0" }
clap = {version = "4.0.26", features = ["std", "derive","color","help","usage"], default-features = false }

[profile.release]
strip=true
lto=true
codegen-units=1
panic="abort"

